# clogger

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: demonic-pacts.yaml
docs/api/: ACTION.md  CATEGORY.md  DIALOGUE.md  ENUMS.md  GAME_VARIABLE.md  (+7 more)
plugin/: build.gradle  run.sh  settings.gradle
scripts/: apply_league_config.py  classify_game_vars.py  compute_walkability.py  fetch_actions.py  fetch_agility_actions.py  fetch_all.py  fetch_charter_ships.py  fetch_diary_tasks.py  fetch_dungeon_entrances.py  fetch_equipment.py  fetch_facilities.py  fetch_fairy_rings.py  fetch_farming_actions.py  fetch_firemaking_actions.py  fetch_fishing.py  fetch_fishing_actions.py  fetch_hunter_actions.py  fetch_items.py  fetch_league_tasks.py  fetch_locations.py  fetch_magic_teleports.py  fetch_map_links.py  fetch_mining.py  fetch_mining_actions.py  fetch_monsters.py  fetch_npcs.py  fetch_prayer_actions.py  fetch_quest_regions.py  fetch_quests.py  fetch_quetzal.py  fetch_recipes.py  fetch_shops.py  fetch_thieving_actions.py  fetch_wiki_vars.py  fetch_woodcutting.py  fetch_woodcutting_actions.py  import_game_vars.py  import_map_squares.py  link_facilities.py  link_shop_locations.py  (+6 more)
tests/: test_account.py  test_activity.py  test_combat.py  test_dialogue.py  test_dialogue_parser.py  test_dialogue_passes.py  test_dialogue_wikitext.py  test_diary.py  test_equipment.py  test_facility.py  test_item.py  test_league.py  test_league_config.py  test_location.py  test_map.py  test_mcp_registry.py  test_monster.py  test_quest.py  test_requirements.py  test_shop.py  test_utils.py
(+190 files in other folders)
